refactor: move resources out of namespaced folders